# dbserver-api

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml
src/: manage.py
src/api/: urls.py
src/api/migrations/: 0001_initial.py
src/api/models/: __init__.py  document.py
src/api/serializers/: __init__.py  document_serializer.py
src/api/views/: document_view.py
src/dbserver/: asgi.py  settings.py  urls.py  wsgi.py
